...

    <string name="action_settings">Configurações</string>

    <string name="logout_text">Sair</string>

    <string name="register_user">Cadastro Usuário</string>
    <string name="save">Salvar</string>
    <string name="atualizar">Atualizar</string>
    <string name="cancel">Cancelar</string>

    <string name="entrar">Entrar</string>
    <string name="recuperar_senha">Recuperar senha</string>

    <string name="alter_senha">Caso altere a senha, ocorrerá logout em sua conta.</string>
    <string name="menu_adicionar">Adicionar</string>
    <string name="menu_adicionar_propriedade">Adicionar uma propriedade</string>
    <string name="menu_adicionar_animal">Adicionar um animal</string>
...
    <string name="campo_identificador">Identificador</string>
    <string name="campo_data_nascimento">Data de nascimento</string>
    <string name="campo_nenhum_animal">Nenhum animal cadastrado</string>
    <string name="campo_nenhuma_propriedade">Nenhuma propriedade cadastrada</string>

    <string name="campo_nenhum_proprietario">Nenhum proprietário cadastrado</string>
    <string name="campo_nenhum_composto">Nenhum composto cadastrado</string>
    <string name="campo_nenhuma_dieta">Nenhuma dieta cadastrada</string>
    <string name="campo_escolha_ativo">Animal está ativo?</string>
    <string name="campo_confirmacao_dados">Confirmar dados</string>
    <string name="campo_data">Data</string>
    <string name="campo_data_registro">Data de registro</string>
    <string name="campo_caminhada_vertical">Caminhada vertical (m)</string>
...
